# audio-glyph-inference

./: .gitignore  .gitlab-ci.yml  AGENTS.md  CLAUDE.md  README.md  docker-compose.yml  run_audio_glyph_inference.bat  run_audio_glyph_inference.sh
.agents/skills/data-driven-check/: SKILL.md
.agents/skills/frontend-protocol/: SKILL.md
.agents/skills/phase-awareness/: SKILL.md
.agents/skills/validation-protocol/: SKILL.md
.claude/: settings.json
.claude/commands/: new-transform-family.md  phase-status.md  pre-commit.md  review.md  scaffold.md  validate.md
.claude/skills/data-driven-check/: SKILL.md
.claude/skills/frontend-protocol/: SKILL.md
.claude/skills/phase-awareness/: SKILL.md
.claude/skills/transform-protocol/: SKILL.md
.claude/skills/validation-protocol/: SKILL.md
.codex/: hooks.json
.codex/commands/: new-transform-family.md  phase-status.md  pre-commit.md  review.md  scaffold.md  validate.md
.github/workflows/: ci.yml  release.yml
backend/: .dockerignore  Dockerfile  README.md  pyproject.toml
backend/data/audio/: .gitkeep
backend/data/contours/: .gitkeep
backend/experiments/: .gitkeep
backend/src/: __init__.py  config.py  constants.py
backend/src/api/: __init__.py  main.py
backend/src/api/routers/: __init__.py  datasets.py  experiments.py  health.py  inference.py  live.py
backend/src/data/: __init__.py  database.py
backend/src/data/orm/: __init__.py  audio_sample_row.py  base.py  experiment_run_row.py  glyph_target_row.py  paired_example_row.py  transform_candidate_row.py
backend/src/models/: __init__.py  audio_sample.py  experiment_run.py  glyph_target.py  paired_example.py  transform_candidate.py
backend/src/simulation/: __init__.py  audio_preprocessor.py  experiment_tracker.py  glyph_extractor.py  search_engine.py  shape_distance.py
backend/src/simulation/transforms/: __init__.py  dynamical_system.py  fourier_series.py  lissajous.py  phase_space_embedding.py  symbolic_regression.py  transform_base.py
backend/tests/: __init__.py  conftest.py  test_config.py  test_constants.py
backend/tests/api/: __init__.py  test_main.py
backend/tests/api/routers/: __init__.py  test_datasets.py  test_experiments.py  test_health.py  test_inference.py  test_live.py
backend/tests/data/: __init__.py  test_database.py
backend/tests/data/orm/: __init__.py  test_audio_sample_row.py  test_base.py  test_experiment_run_row.py  test_glyph_target_row.py  test_paired_example_row.py  test_transform_candidate_row.py
backend/tests/models/: __init__.py  test_audio_sample.py  test_experiment_run.py  test_glyph_target.py  test_paired_example.py  test_transform_candidate.py
backend/tests/simulation/: __init__.py  test_audio_preprocessor.py  test_experiment_tracker.py  test_glyph_extractor.py  test_search_engine.py  test_shape_distance.py
backend/tests/simulation/transforms/: __init__.py  test_dynamical_system.py  test_fourier_series.py  test_lissajous.py  test_phase_space_embedding.py  test_symbolic_regression.py  test_transform_base.py
docs/: AUDIO_GLYPH_INFERENCE_MASTER_PLAN.md  dependencies.md  recording_protocol.md  run_guide.md  status.md  versions.md
docs/phases/: phase-1-plan.md  phase-2-plan.md  phase-3-plan.md  phase-4-plan.md  phase-5-plan.md
